--- a/MedicalClinic/src/View/PatientsView.form
+++ b/MedicalClinic/src/View/PatientsView.form
@@ -2,16 +2,11 @@
 
 <Form version="1.5" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <NonVisualComponents>
-    <Component class="javax.persistence.EntityManager" name="MedicalClinicPUEntityManager0">
-      <Properties>
-        <Property name="persistenceUnit" type="java.lang.String" value="MedicalClinicPU"/>
-      </Properties>
-    </Component>
     <Component class="javax.persistence.Query" name="agreementQuery">
       <Properties>
         <Property name="query" type="java.lang.String" value="SELECT a FROM Agreement a"/>
-        <Property name="entityManager" type="java.lang.Object" editor="org.netbeans.modules.form.j2ee.J2EEPropertyModifier$EMProperty$EntityManagerEditor">
-          <ComponentRef name="MedicalClinicPUEntityManager0"/>
+        <Property name="entityManager" type="java.lang.Object" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+          <Connection code="Utils.EntityManagerSingleton.getInstance().getEntityManager()" type="code"/>
         </Property>
       </Properties>
     </Component>
