The news Alterations pópópó!!!

--- a/MedicalClinic/src/View/PrincipalView.form
+++ b/MedicalClinic/src/View/PrincipalView.form
@@ -17,10 +17,23 @@
                 <Property name="mnemonic" type="int" value="111"/>
                 <Property name="text" type="java.lang.String" value="Pacientes"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="patientsMenuItemActionPerformed"/>
+              </Events>
             </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="appointmentsMenuItem">
               <Properties>
                 <Property name="text" type="java.lang.String" value="Consultas"/>
+              </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="appointmentsMenuItemActionPerformed"/>
+              </Events>
+            </MenuItem>
+            <MenuItem class="javax.swing.JMenuItem" name="secretaryReportsMenuItem">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Relat&#xf3;rios"/>
+                <Property name="actionCommand" type="java.lang.String" value="SecretaryReportsMenuItem"/>
+                <Property name="autoscrolls" type="boolean" value="true"/>
               </Properties>
             </MenuItem>
           </SubComponents>
@@ -40,6 +53,15 @@
               <Properties>
                 <Property name="mnemonic" type="int" value="97"/>
                 <Property name="text" type="java.lang.String" value="Agravamentos"/>
+              </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="aggravationsMenuItemActionPerformed"/>
+              </Events>
+            </MenuItem>
+            <MenuItem class="javax.swing.JMenuItem" name="doctorReportsMenuItem">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Relat&#xf3;rios"/>
+                <Property name="actionCommand" type="java.lang.String" value="DoctorReportsMenuItem"/>
               </Properties>
             </MenuItem>
           </SubComponents>
